<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/midnightblue">

    </LinearLayout>-->
    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/selectclas"
            android:textColorHint="@color/black"
            android:textStyle="bold"
            />
        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <RadioButton
                android:id="@+id/economy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/economy"
                />
            <RadioButton
                android:id="@+id/busi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/business"/>
            <RadioButton
                android:id="@+id/first"
                android:buttonTint="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first"/>
            <RadioButton
                android:id="@+id/prem"
                android:buttonTint="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/premium"/>

        </RadioGroup>


       <!-- <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="100dp"
                android:id="@+id/cancel"
                android:layout_height="wrap_content"
                android:hint="@string/cancel"
                android:textAlignment="center"
                android:textSize="15dp"
                android:layout_marginLeft="14dp"
                android:textColorHint="@color/midnightblue"
                android:background="@color/white"/>

            <Button
                android:layout_width="100dp"
                android:id="@+id/ok"
                android:layout_height="wrap_content"
                android:hint="@string/ok"
                android:textAlignment="center"
                android:textSize="15dp"
                android:layout_marginLeft="14dp"
                android:textColorHint="@color/midnightblue"
                android:background="@color/white"/>

        </LinearLayout>-->
    </LinearLayout>




</LinearLayout>