<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Add Passengers"
        android:textColorHint="@color/black"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
       <LinearLayout
           android:layout_width="150dp"
           android:layout_height="wrap_content"
           android:orientation="vertical">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
           <TextView
               android:id="@+id/numb1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:hint="1"
               android:textColorHint="@color/black"
               android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/adult"
            android:layout_marginLeft="5dp"
            android:textColorHint="@color/black"
            android:textStyle="bold"/>
</LinearLayout>
           <TextView

               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="12 years old  &amp; above"
               android:textColorHint="@color/black"
               android:textStyle="bold"/>
    </LinearLayout>

        <Button

            android:id="@+id/sub1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="-"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:textColorHint="@color/colorAccent"
            android:textSize="15dp" />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="1"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColorHint="@color/black"
            android:id="@+id/adult"
            />
        <Button
            android:id="@+id/add1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:hint="+"
            android:textSize="15dp"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:textColorHint="@color/midnightblue"
            android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/numb2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="0"
                    android:textColorHint="@color/black"
                    android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/children"
                android:layout_marginLeft="5dp"
                android:textColorHint="@color/black"
                android:textStyle="bold"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2 to 12 years old"
                android:textColorHint="@color/black"
                android:textStyle="bold"/>
        </LinearLayout>

        <Button
            android:id="@+id/sub2"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="-"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:textColorHint="@color/colorAccent"
            android:textSize="15dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="0"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColorHint="@color/black"
            android:id="@+id/child"
            />
        <Button
            android:id="@+id/add2"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:hint="+"
            android:textSize="15dp"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:textColorHint="@color/midnightblue"
            android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/numb3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="0"
                    android:textColorHint="@color/black"
                    android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/infants"
                android:layout_marginLeft="5dp"
                android:textColorHint="@color/black"
                android:textStyle="bold"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="less than 2 years"
                android:textColorHint="@color/black"
                android:textStyle="bold"/>
        </LinearLayout>

        <Button
            android:id="@+id/sub3"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="-"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:textColorHint="@color/colorAccent"
            android:textSize="15dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="0"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColorHint="@color/black"
            android:id="@+id/infant"
            />
        <Button
            android:id="@+id/add3"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:hint="+"
            android:textAlignment="center"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:textColorHint="@color/midnightblue"
            android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:layout_width="100dp"
        android:id="@+id/cancel"
        android:layout_height="wrap_content"
        android:hint="@string/cancel"
        android:textAlignment="center"
        android:textSize="15dp"
        android:layout_marginLeft="134dp"
        android:textColorHint="@color/midnightblue"
        android:background="@color/white"/>

        <Button
            android:layout_width="70dp"
            android:id="@+id/ok"
            android:layout_height="wrap_content"
            android:hint="@string/ok"
            android:textAlignment="center"
            android:textSize="15dp"
            android:layout_marginLeft="32dp"
            android:textColorHint="@color/midnightblue"
            android:background="@color/white"/>

    </LinearLayout>
</LinearLayout>