<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/midnightblue"></LinearLayout>


    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="132dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="28dp"
                    android:text="@string/origin"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"

                    android:text="@string/destination"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <EditText
                    android:id="@+id/origin"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:hint="@string/origin"

                    android:textStyle="bold"/>
                <ImageView
                    android:id="@+id/swap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_sync_black_24dp"/>

                <EditText
                    android:id="@+id/destination"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginLeft="5dp"
                    android:hint="@string/destination"

                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Depart"
                    android:textSize="10sp"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Return"
                    android:textSize="10sp"
                    android:layout_marginLeft="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:hint="02 Feb 20"
                    android:clickable="true"
                    android:textStyle="bold"
                    android:textColorHint="@color/black"
                    android:id="@+id/depart_date"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginLeft="5dp"
                    android:hint="02 Feb 20"
                    android:textStyle="bold"
                    android:textColorHint="@color/black"
                    android:id="@+id/return_date"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Travellers"
                    android:textSize="10sp"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Class"
                    android:textSize="10sp"
                    android:layout_marginLeft="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:hint="1 Adult"
                    android:textColorHint="@color/black"
                    android:textStyle="bold"
                    android:id="@+id/travellertype"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginLeft="5dp"
                    android:hint="@string/first"
                    android:textColorHint="@color/black"
                    android:textStyle="bold"
                    android:id="@+id/travclass"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/background"/>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="245dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/popup_menu"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="SEARCH"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            app:backgroundTint="@color/transparent"
            app:cornerRadius="15dp"
            app:rippleColor="#33AAAAAA"
            app:strokeColor="@color/colorAccent"
            app:strokeWidth="2dp" />

    </LinearLayout>

</RelativeLayout>